<resources>
    <string name="app_name">Beber Agua - lembrete</string>
    <string name="hint_peso">Seu Peso (Kg)</string>
    <string name="hint_idade">Sua Idade</string>
    <string name="text_button_calcular">Calcular Ingestão Diária</string>
    <string name="text_button_lembrete">Lembrete</string>
    <string name="text_button_alarme">Alarme</string>
    <string name="text_hora">00</string>
    <string name="text_dois_pontos">:</string>
    <string name="text_minutos">00</string>
    <string name="text_informa_peso">Informe o seu peso!</string>
    <string name="text_informa_idade">Informe sua idade!</string>
    <string name="dialog_titulo">Redefinir dados</string>
    <string name="dialog_descricao">Deseja excluir todos os dados existentes?</string>

</resources>